Few improvements and Ores gui